[package]
name = "cardascii"
version = "0.1.0"
authors = ["Anibal Fernando Antonelli <anibal.anto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.1"
unicode-segmentation = "1.2.0"
cast = "0.2.3"
gameboard = "0.1.0"
rand = "0.8.0"
